--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,21 @@ XaeroWaypoints
 XaeroWaypoints_BACKUP032021
 XaeroWorldMap
 capes
-crash-reports
 downloads
 dumps
 fancymenu_data
 fancymenu_setups
-logs
+
 replay_recordings_nukelord420_reviewed_dud
-saves/Cobtopia 6-22-2021
-saves/New World (1) - Copy1
-saves/Ore Test Template
-saves/bnw2
-saves/shulkerfarmtutorial
-saves/flying machine test.7z
+
+#logs
+logs
+crash-reports
+
+#worlds (all ignored except dev world)
+saves/*
+!saves/Dev World 
+
 screenshots
 simple-rpc
 tconplanner
